使用redisson实现分布式锁

--- a/service/service_edu/pom.xml
+++ b/service/service_edu/pom.xml
@@ -25,6 +25,11 @@
             <groupId>org.apache.xmlbeans</groupId>
             <artifactId>xmlbeans</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.23.5</version>
+        </dependency>
     </dependencies>
 
     <build>
