--- a/pom.xml
+++ b/pom.xml
@@ -123,7 +123,10 @@
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
-<!--            <dependency>-->
+
+
+
+            <!--<dependency>-->
 <!--                <groupId>io.swagger</groupId>-->
 <!--                <artifactId>swagger-annotations</artifactId>-->
 <!--                <version>1.5.21</version>-->
@@ -203,11 +206,12 @@
                 <artifactId>aliyun-java-sdk-vod</artifactId>
                 <version>${aliyun-java-sdk-vod.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.aliyun</groupId>
-                <artifactId>aliyun-java-vod-upload</artifactId>
-                <version>${aliyun-java-vod-upload.version}</version>
-            </dependency>
+            <!--依赖没有开源需要下载添加到项目当中-->
+<!--            <dependency>-->
+<!--                <groupId>com.aliyun</groupId>-->
+<!--                <artifactId>aliyun-java-vod-upload</artifactId>-->
+<!--                <version>${aliyun-java-vod-upload.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-sdk-vod-upload</artifactId>
@@ -245,6 +249,9 @@
                 <artifactId>xmlbeans</artifactId>
                 <version>${apache.xmlbeans.version}</version>
             </dependency>
+
+
+
         </dependencies>
     </dependencyManagement>
 
