--- a/service/service_edu/src/main/resources/application.yml
+++ b/service/service_edu/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     time-zone: GMT+8
   #spring:
   redis:
-    host: 192.168.229.132
+    host: 192.168.229.134
     port: 6379
     database: 0
     password: 123456  #默认为空
@@ -59,5 +59,8 @@ ribbon:
 feign:
   sentinel:
     enabled: true # 激活Sentinel对Feign的支持
+
+#Swageer地址 http://localhost:8110/swagger-ui.html
+
 
 
