--- a/service/service_vod/src/main/resources/application.yml
+++ b/service/service_vod/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
 
 aliyun:
   vod:
-    keyid: xxxx
-    keysecret: xxxxxx
+    keyid: LTAI5tDAJbmAGWqUZhyMKCtP
+    keysecret: tJPxCbF666WNYMKb4zjnvd53Q3MUbA
 #    templateGroupId: 5969d075d72bebf65b39670f019ed6ed #转码模板组id
 #    workflowId: b2cde7eaf99a895b89ab1a88abee0a25 #工作流id
